--- a/CoreServiceConsoleTest/CoreServiceConsoleTest.csproj
+++ b/CoreServiceConsoleTest/CoreServiceConsoleTest.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Serilog.Extensions.Logging.File" Version="1.1.0" />
+    <PackageReference Include="System.ServiceProcess.ServiceController" Version="4.5.0" />
+  </ItemGroup>
+
 </Project>
